[gd_scene load_steps=5 format=2]

[ext_resource path="res://Screens/QuestionList.gd" type="Script" id=1]
[ext_resource path="res://res/Wood15.jpg" type="Texture" id=2]
[ext_resource path="res://Interface/TextDisplay/LabelAdaptiveTitle.tscn" type="PackedScene" id=3]
[ext_resource path="res://Interface/Buttons/MenuButton.tscn" type="PackedScene" id=4]





[node name="WordListRoot" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 635.74, 805.702 )
texture = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 40

[node name="LabelTitle" parent="VBoxContainer" instance=ExtResource( 3 )]
margin_right = 720.0

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
margin_top = 100.0
margin_right = 720.0
margin_bottom = 550.0
rect_min_size = Vector2( 0, 450 )

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
margin_bottom = 450.0
rect_min_size = Vector2( 0, 450 )

[node name="ButtonAddWord" parent="VBoxContainer" instance=ExtResource( 4 )]
margin_left = 0.0
margin_top = 590.0
margin_right = 720.0
margin_bottom = 666.455
text_loc = "createQuestion"

[node name="ButtonAddWord2" parent="VBoxContainer" instance=ExtResource( 4 )]
margin_left = 0.0
margin_top = 706.0
margin_right = 720.0
margin_bottom = 782.455
text_loc = "appendDictionary"

[node name="ButtonDeleteLesson" parent="VBoxContainer" instance=ExtResource( 4 )]
margin_left = 0.0
margin_top = 822.0
margin_right = 720.0
margin_bottom = 898.455
scene_to_load = "res://Manage.tscn"
text_loc = "deleteLesson"
[connection signal="pressed" from="VBoxContainer/ButtonAddWord" to="." method="_on_ButtonAddWord_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonDeleteLesson" to="." method="_on_ButtonDeleteLesson_pressed"]
